refactoring lost code

--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -35,6 +35,15 @@
 
 }
 
+.footer{
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+  
+  }
+
 .action{
     width: 200px;
     margin: auto;
