--- a/src/app/avaliation/composicao-corporal/cc.component.html
+++ b/src/app/avaliation/composicao-corporal/cc.component.html
@@ -69,8 +69,8 @@
                 </mat-card>
             </mat-expansion-panel>
 
-            <mat-expansion-panel >
-                <mat-expansion-panel-header (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel  (opened)="panelOpenState = true">
+                <mat-expansion-panel-header>
                     <mat-panel-title i18n="Title">
                         BIOIMPEDÂNCIA
                     </mat-panel-title>
@@ -80,9 +80,21 @@
                         <mat-card-subtitle i18n="Subtitle">Balança</mat-card-subtitle>
                     </mat-card-header>
                 </mat-card>
+                <mat-card>
+                    <mat-card-header [routerLink]="['/scaner/', studentId]">
+                        <mat-card-subtitle i18n="Subtitle">SCANER</mat-card-subtitle>
+                    </mat-card-header>
+                </mat-card>
+            </mat-expansion-panel>
+            <mat-expansion-panel>
+                <mat-expansion-panel-header [routerLink]="['/dexa/', studentId]">
+                    <mat-panel-title i18n="Title">
+                        DEXA
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
             </mat-expansion-panel>
 
-            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel (opened)="panelOpenState = true">
                 <mat-expansion-panel-header>
                     <mat-panel-title i18n="Title">
                         ANTROPOMETRIA
