--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -79,6 +79,9 @@
         <button mat-mini-fab color="primary" (click)="goBack()">
           <mat-icon>undo</mat-icon>
         </button>
+        <a mat-mini-fab color="primary" [routerLink]="['/rdc/', id]">
+            <mat-icon>redo</mat-icon>
+        </a>
         
       </div>
 </div>
