--- a/src/app/avaliation/risco/rddc/rddc.component.scss
+++ b/src/app/avaliation/risco/rddc/rddc.component.scss
@@ -68,3 +68,12 @@
 .mat-radio-button{
     padding-right: 20px;
 }
+
+.footer{
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+  
+  }
