--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -74,6 +74,21 @@
     background-color: #303031;
     color: rgb(255, 255, 255);
   }
+
+
+  .photos{
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
+    .photo{
+      width: 27%;
+      margin: auto;
+    }
+  }
+
+
   .footer {
     position: absolute;
     bottom: 1%;
