--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -1,10 +1,9 @@
-<div class="container-fluid">
+<div class="container">
   <div class="header">
     <h1 class="header-title" i18n>Anamenese</h1>
   </div>
 
-  <div class="main">
-
+  <div class="section">
     <mat-accordion class="headers-align">
       <!-- Objectivos -->
       <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
@@ -733,7 +732,6 @@
       </mat-expansion-panel>
 
     </mat-accordion>
-
   </div>
 
   <div class="footer">
