--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -1,9 +1,7 @@
-<div class="container-fluid">
+<div class="container">
     <div class="header">
         <h1 i18n="Title">Avaliações</h1>
-        <h2>{{selectedStudent.NOME}}</h2>
     </div>
-
 
     <div class="main">
         <mat-accordion>
