--- a/src/app/avaliation/av-dash/av-dash.component.scss
+++ b/src/app/avaliation/av-dash/av-dash.component.scss
@@ -1,76 +1,37 @@
-.container-fluid{
-    position: relative;
-    height: 94vh;
-    width: 100vw;
- /*    background-image: url("../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+.container {
+  height: 94vh;
+  width: 100vw;
+    background-image: url("../../../assets/img/measurement-1698856.jpg");
     background-repeat: no-repeat;
     background-blend-mode: normal;
     background-size: cover;
     background-position: center; 
-    background-color:  rgba(247, 238, 238, 0.704);*/
-
     overflow: auto;
-  }
-
-  .header{
-      margin-top: 30px;;
-      width: 100%;
-      text-align: center;
-      color: rgb(35, 35, 185);
-  }
-
-  .main{
-      width: 96%;
-      height: 75%;
-      position: absolute;
-      bottom: 8%;
-      left: 50%;
-      transform: translate(-50%,0);
-      display: flex;
-      flex-direction: column-reverse;
-      overflow: auto;
-
-      mat-expansion-panel{
-        background-color: rgba(247, 238, 238, 0.704);
-        border-radius: 4px;
-      }
-      .mat-expansion-panel:not(.mat-expanded):not([aria-disabled=true]) .mat-expansion-panel-header:hover{
-          // background-color: rgba(51, 48, 48, 0.904);
-      }
-      mat-expansion-panel-header {
-      //  background-color: rgba(51, 48, 48, 0.904);      
-      }
-      
-      mat-expansion-panel-body {
-        padding: 0;
-      }
-
-      mat-expansion-panel-content{
-      //  background-color: rgba(51, 48, 48, 0.904);
-      }
-
-
-
-      mat-panel-title{
-      //  color: white;
-    }
-    .mat-card{
-        height: 30px;
-      //  background-color: rgba(14, 13, 13, 0.904);
-        margin-bottom: 1px;
-        .mat-card-subtitle{
-       //    color: white; 
-        }
-        
-    }
-
-  }
-
-.footer{
-  position: absolute;
-  bottom: 1%;
-  left: 50%;
-  transform: translateX(-50%);
-
 }
-  
+
+.main {
+  width: 96%;
+  height: 75%;
+  position: absolute;
+  bottom: 8%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column-reverse;
+  overflow: auto;
+
+  mat-expansion-panel {
+    background-color: rgba(247, 238, 238, 0.704);
+    border-radius: 4px;
+  }
+  mat-expansion-panel-body {
+    padding: 0;
+  }
+
+  .mat-card {
+    height: 30px;
+    //  background-color: rgba(14, 13, 13, 0.904);
+    margin-bottom: 1px;
+  }
+}
+
