--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     bottom: 1%;
     left: 50%;
     transform: translateX(-50%);
-    .mat-flat-button{
+    .mat-mini-fab{
       margin: 2px 10px;
     }
   }
