--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="headers">
-        <h2 i18n>Avaliação Postural</h2>
+    <div class="header">
+        <h1 i18n>Avaliação Postural</h1>
     </div>
 
     <div class="section">
