--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="headers">
+    <div class="header">
         <h2 i18n>Dados Complementares</h2>
     </div>
 
